<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xiuyukeji.filterrecord.mainactivity">
    <item
        android:id="@+id/action_none"
        android:title="@string/action_none"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_fairytale"-->
        <!--android:title="@string/action_fairytale"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_sunrise"
        android:title="@string/action_sunrise"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sunset"
        android:title="@string/action_sunset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_whitecat"
        android:title="@string/action_whitecat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_blackcat"
        android:title="@string/action_blackcat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_beauty"
        android:title="@string/action_beauty"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_skinwhiten"
        android:title="@string/action_skinwhiten"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_healthy"
        android:title="@string/action_healthy"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_sweets"-->
        <!--android:title="@string/action_sweets"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_romance"
        android:title="@string/action_romance"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sakura"
        android:title="@string/action_sakura"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_warm"
        android:title="@string/action_warm"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_antique"
        android:title="@string/action_antique"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nostalgia"
        android:title="@string/action_nostalgia"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_calm"
        android:title="@string/action_calm"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_latte"
        android:title="@string/action_latte"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tender"
        android:title="@string/action_tender"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cool"
        android:title="@string/action_cool"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_emerald"
        android:title="@string/action_emerald"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_evergreen"
        android:title="@string/action_evergreen"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_crayon"
        android:title="@string/action_crayon"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sketch"
        android:title="@string/action_sketch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_amaro"
        android:title="@string/action_amaro"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_brannan"
        android:title="@string/action_brannan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_brooklyn"
        android:title="@string/action_brooklyn"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_earlybird"
        android:title="@string/action_earlybird"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_freud"
        android:title="@string/action_freud"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_hefe"-->
        <!--android:title="@string/action_hefe"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_hudson"
        android:title="@string/action_hudson"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_inkwell"
        android:title="@string/action_inkwell"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_kevin"
        android:title="@string/action_kevin"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_lomo"-->
        <!--android:title="@string/action_lomo"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_n1977"
        android:title="@string/action_n1977"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nashville"
        android:title="@string/action_nashville"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pixar"
        android:title="@string/action_pixar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rise"
        android:title="@string/action_rise"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sierra"
        android:title="@string/action_sierra"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sutro"
        android:title="@string/action_sutro"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toaster2"
        android:title="@string/action_toaster2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_valencia"
        android:title="@string/action_valencia"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_walden"
        android:title="@string/action_walden"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_xproii"
        android:title="@string/action_xproii"
        app:showAsAction="never" />
</menu>
